@startuml
!pragma layout smetana
scale 4
hide circle
skinparam classAttributeIconSize 0

class Command {
    --
    + execute(inventory: Inventory): void
    + execute(inventory: Inventory, expiry: LocalDate): void
}

class ListIngredientCommand {
    --
    + ListIngredientCommand()
    + ListIngredientCommand(expiryCutoff: LocalDate)
    + execute(inventory: Inventory): void
    + execute(inventory: Inventory, expiry: LocalDate): void
}

class Inventory {
    --
    + getIngredients(): ArrayList<Ingredient>
}

class Ingredient {
    --
    + hasExpiryBefore(expiry: LocalDate): boolean
    + toString(expiryCutoff: LocalDate): String
}

class Ui {
    --
    {static} + printMessage(message: String): void
}

' Inheritance
ListIngredientCommand --|> Command

' List flow dependencies
ListIngredientCommand ..> Inventory
ListIngredientCommand ..> Ingredient
ListIngredientCommand ..> Ui

' Data relationship required by listing
Inventory "1" o-- "*" Ingredient

@enduml
